# dockerfile-build

./: Cargo.toml  LICENSE.txt  README.md
.github/workflows/: publish.yml
dockerfiles/: hello.dockerfile
src/: lib.rs  utils.rs
