[package]
name = "dockerfile-build"
version = "0.1.1"
edition = "2021"
description = "A Rust library to automate building Docker images from a local Dockerfile"
license = "MIT"

[dependencies]
bollard = "0.13"
flate2 = "1.0.23"
tar = "0.4.38"
futures = "0.3.23"
tracing = "0.1.36"
tokio = "1.20.1"
thiserror = "1.0.32"
dockertest = { version = "0.3.1", optional = true }

[dev-dependencies]
wiremock = "0.5"

[dev-dependencies.tokio]
version = "1.20.1"
features = ["macros"]

[features]
dockertest = ["dep:dockertest"]
